<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_rounded_bg"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/inter_medium"
        android:text="ADD AN ANNOUNCEMENT"
        android:textSize="15sp">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/inter_black"
        android:text="What's on your mind?"
        android:textSize="17sp">

    </TextView>

    <EditText
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:padding="10dp"
        android:fontFamily="@font/inter_medium"
        android:background="@drawable/rounded_bg"
        android:height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/an_title_edit_text">

    </EditText>


    <EditText
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:hint="Body"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="50dp"
        android:fontFamily="@font/inter_medium"
        android:id="@+id/an_body_edit_text">

    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Events:"
        android:paddingBottom="5dp"
        android:fontFamily="@font/inter_semibold"
        android:textSize="15dp">

    </TextView>

    <TextView
        android:id="@+id/no_event_handler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="You have no events to announce to!"
        android:textColor="@color/delete"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/inter_semibold"
        android:textSize="15dp"
        android:visibility="gone">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_bg">

        <Spinner
            android:id="@+id/event_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">


        <Button
            android:id="@+id/annc_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_black"
            android:textSize="20dp"
            android:text="Cancel"
            android:paddingLeft="50dp"
            android:paddingEnd="80dp"/>
        <Button
            android:id="@+id/annc_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:fontFamily="@font/inter_black"
            android:paddingRight="50dp"
            android:textSize="20dp"
            android:text="Ok" />

    </LinearLayout>

</LinearLayout>