...
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/white_rounded_bg"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/nav_o_announcements_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:src="@drawable/announcements_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
...
        android:id="@+id/nav_o_add_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:src="@drawable/add_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nav_o_profile_btn"
        app:layout_constraintStart_toEndOf="@+id/nav_o_events_btn" />

    <ImageButton
        android:id="@+id/nav_o_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
